--- a/src/app/components/shared/loading/loading.component.html
+++ b/src/app/components/shared/loading/loading.component.html
@@ -1,1 +1,5 @@
-<p>loading works!</p>
+<div class="row text-center animated fadeIn">
+    <div class="col">
+        <i class="fa fa-refresh fa-spin fa-x5" aria-hidden="true"></i>
+    </div>
+</div>
