--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,6 @@
 <div class="card-columns">
-    <div *ngFor="let item of items" class="card">
+
+    <div (click)="verArtista(item)" *ngFor="let item of items" class="puntero card">
         <img [src]="item.images | noimages" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> {{item.name}} </h5>
