--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -11,3 +11,26 @@
         <button class="btn btn-outline-danger" [routerLink]="['/search']">Volver</button>
     </div>
 </div>
+
+<div class="row m-5">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Foto</th>
+                    <th>Albun</th>
+                    <th>Cancion</th>
+                    <th>Vista Previa</th>
+                </tr>
+                <tr *ngFor="let tracks of topTracks">
+                    <td> <img class=" img-thumb" [src]="tracks.album.images | noimages" alt=""> </td>
+                    <td> {{tracks.album.name}} </td>
+                    <td> {{tracks.name}} </td>
+                    <td>
+                        <audio [src]="tracks.preview_url" controls></audio>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+    </div>
+</div>
